--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -94,18 +95,71 @@
             <div class="blogs-container">
                 <div class="blog">
                     <img src="https://static.wixstatic.com/media/d756b4_6b421006dfcd4193b7e7be99544d7d51~mv2.jpg/v1/fill/w_292,h_164,fp_0.50_0.50,q_90/d756b4_6b421006dfcd4193b7e7be99544d7d51~mv2.jpg">
-                    <div class="blog-content"></div>
+                    <div class="blog-content">
+                        <span>Jun 18 &#8226; 3 min</span>
+                        <h2>How to go from idea to product using Design Sprints</h2>
+                        <p>Building a product from a mere idea is a challenge in itself. Such product-</p>
+                    </div>
                 </div>
                 <div class="blog">
                     <img src="https://static.wixstatic.com/media/d756b4_252938b45e5d45babfc79090ae4afbac~mv2.png/v1/fill/w_365,h_205,fp_0.50_0.50,q_95/d756b4_252938b45e5d45babfc79090ae4afbac~mv2.webp">
-                    <div class="blog-content"></div>
+                    <div class="blog-content">
+                        <span>Jun 13 &#8226; 4 min</span>
+                        <h2>Productivity Hacks for Work from Home</h2>
+                        <p>Working from home can be challenging, especially for individuals and teams who aren’t used to working</p>
+                    </div>
                 </div>
                 <div class="blog">
                     <img src="https://static.wixstatic.com/media/d756b4_cdb302b333514c67a0c3335928d27eec~mv2.jpeg/v1/fill/w_365,h_205,fp_0.50_0.50,q_90/d756b4_cdb302b333514c67a0c3335928d27eec~mv2.webp">
-                    <div class="blog-content"></div>
+                    <div class="blog-content">
+                        <span>May 29 &#8226; 2 min</span>
+                        <h2>Work From Home: Designer’s Edition</h2>
+                        <p>The Covid pandemic has hit the world hard, leading to some major transformations in traditional business</p>
+                    </div>
                 </div>
+            </div>
+            <div class="numbering">
+                <a>&lt;</a>
+                <a>1</a>
+                <a>2</a>
+                <a>3</a>
+                <a>4</a>
+                <a>5</a>
+                <a>&gt;</a>
             </div>
         </div>
     </div>
+    <hr>
+    <footer>
+        <form>
+            <h1>Reach out to us!</h1>
+            <input type="text" name="Name" placeholder="Name"></br>
+            <input type="email" name="Email" placeholder="Email"></br>
+            <input type="number" name="Phone" placeholder="Phone"></br>
+            <textarea>Type your message here...</textarea></br>
+            <button type="submit">Submit</button>
+        </form>
+        <div class="about">
+            <h1>About</h1>
+            <button>Home</button></br>
+            <button>Our Product</button></br>
+            <button>Why US?</button>
+            <div class="contact-details">
+                <h4>Download Dezy It</h4>
+                <div class="contact-links">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Google_Play_Store_badge_EN.svg/1200px-Google_Play_Store_badge_EN.svg.png">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Download_on_the_App_Store_Badge.svg/2560px-Download_on_the_App_Store_Badge.svg.png">
+                </div>
+            </div>
+        </div>
+        <div class="contact">
+            <h1>Contact</h1>
+            <p>Email - support@dezyit.com</p>
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+            <p>© 2020 by Dezy It</p>
+        </div>
+    </footer>
 </body>
 </html>
