responsive 410px-900px

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!--  Navbar Opened  -->
+
     <nav>
         <div class="nav-container">
             <img class="logo-img" src="https://static.wixstatic.com/media/ec9816_fac99786349f4b59aeaf8550dacdbc2d~mv2.gif">
@@ -21,7 +24,16 @@
             </div>
         </div>
     </nav>
+
+    <!--  Navbar Closed  -->
+
+
+    <!--  Main Container Opened  -->
+
     <div class="main-container">
+
+        <!--  Intro Container Opened  -->
+
         <div class="intro-container">
             <div class="intro-text">
                 <h1>Your personal</br> Design Sprint Master!</h1>
@@ -37,6 +49,11 @@
             </div>
             <div class="intro-img"></div>
         </div>
+
+        <!--  Intro Container Closed  -->
+
+        <!--  What Container Opened  -->
+
         <div class="what-container">
             <div class="what-sml-container">
                 <img src="https://static.wixstatic.com/media/ec9816_120f89a1570549e882031fbfb5ee5905~mv2.png/v1/fill/w_750,h_563,al_c,q_95/Design%20Sprint%20-%20Design%20Thinking%20-%20Graphi.webp">
@@ -46,6 +63,11 @@
                 </div>
             </div>
         </div>
+
+        <!--  What Container Closed  -->
+
+        <!--  Our Product Container Opened  -->
+
         <div class="our-product-container">
             <h1>Our Product</h1>
             <p>Dezy It, is your personal design sprint master. It is your design thinking guide and companion to help you facilitate design sprints, to innovate, pivot and improve on the user experience of your product.</p>
@@ -63,6 +85,11 @@
                 </div>
             </div>
         </div>
+
+        <!--  Our Product Container Closed  -->
+
+        <!--  Why Container Opened  -->
+
         <div class="why-container">
             <h1>Why Dezy It?</h1>
             <div class="features-container">
@@ -90,6 +117,11 @@
                 <img src="https://static.wixstatic.com/media/ec9816_2f2c8bead30544a89198bb3d605d232a~mv2.png/v1/fill/w_750,h_563,al_c,q_95/Design%20Sprint%20-%20Design%20Thinking%20-%20Graphi.webp">
             </div>
         </div>
+
+        <!--  Why Container Closed  -->
+
+        <!--  Our Blog Container Opened  -->
+
         <div class="our-blog-container">
             <h1>Our Blog</h1>
             <div class="blogs-container">
@@ -128,8 +160,17 @@
                 <a>&gt;</a>
             </div>
         </div>
+
+        <!--  Our Blog Container Closed  -->
+
     </div>
+
+    <!--  Main Container Closed  -->
+
     <hr>
+
+    <!--  Footer Opened  -->
+
     <footer>
         <form>
             <h1>Reach out to us!</h1>
@@ -161,5 +202,8 @@
             <p>© 2020 by Dezy It</p>
         </div>
     </footer>
+
+    <!--  Footer Closed  -->
+
 </body>
 </html>
